style: Fix alignment of rating icon

--- a/client/styles/components/_property-card.scss
+++ b/client/styles/components/_property-card.scss
@@ -2,9 +2,11 @@
 @use '../base' as *;
 
 .property-card {
-  border: 2px solid var(--color-neutral-200);
+  box-shadow: inset 0 0 0 2px var(--color-neutral-200), inset 0 0 0 2px var(--color-neutral-200),
+    inset 0 0 0 2px var(--color-neutral-200);
   border-radius: 5px;
   overflow: hidden;
+	width: 50.4rem;
   &__content {
     padding: 1.6rem 2.4rem;
     display: flex;
@@ -43,7 +45,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: -2;
   opacity: 0;
   transition-duration: 0.5s ease;
 }
@@ -58,7 +60,7 @@
   }
 }
 .slide.active {
-  z-index: 1;
+  z-index: -1;
   opacity: 1;
   animation: fadeEffect 0.5s ease;
   transition-duration: 0.5s;
